objects/Flosum__AuthorizationDetails__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <customSettingsVisibility>Public</customSettingsVisibility>
    <description>Save user name and access token</description>
    <fields>
        <fullName>Flosum__AccessToken__c</fullName>
        <label>Access Token</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Flosum__AuthorisedUser__c</fullName>
        <label>Authorised User</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Flosum__InstanceURL__c</fullName>
        <label>Instance URL</label>
        <required>true</required>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Flosum__RefreshToken__c</fullName>
        <label>Refresh Token</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Authorization Details</label>
</CustomObject>